--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "nuxt-apollo",
+  "name": "flowy-life",
   "version": "1.0.0",
-  "description": "Nuxt.js with Apollo",
-  "author": "Charlie Hield",
+  "description": "Nuxt.js with Firebase",
+  "author": "Mateo Marquez",
   "license": "MIT",
   "scripts": {
     "dev": "nuxt",
@@ -11,25 +11,21 @@
   },
   "keywords": [
     "nuxt",
-    "vue",
-    "apollo",
-    "graphql"
+    "vue"
   ],
   "dependencies": {
-    "@moltin/sdk": "^2.2.0",
-    "apollo-client": "^1.0.2",
     "axios": "^0.16.1",
-    "fs": "0.0.1-security",
-    "graphql-tag": "^2.0.0",
-    "isomorphic-fetch": "^2.2.1",
-    "moltin": "^2.2.0",
     "nuxt": "^0.10.5",
+    "vue-in-viewport-directive": "^1.1.4",
+    "vue-parallax-js": "0.0.4",
+    "vue-scroll": "^2.0.2",
     "zooming": "^1.1.4"
   },
   "devDependencies": {
     "css-loader": "^0.28.1",
     "node-sass": "^4.5.2",
     "sass-loader": "^6.0.3",
-    "vue-style-loader": "^3.0.1"
+    "vue-style-loader": "^3.0.1",
+    "vue-waypoint": "^2.4.0"
   }
 }
