--- a/.gitignore
+++ b/.gitignore
@@ -64,3 +64,25 @@ jspm_packages
 .nuxt/router.js
 .nuxt/server.js
 .nuxt/utils.js
+dist/_nuxt/0.nuxt.bundle.494878ec87e842afb84a.js
+dist/_nuxt/1.nuxt.bundle.342152d159601bbca2ae.js
+dist/_nuxt/2.nuxt.bundle.a7514bd297c1eae62c34.js
+dist/_nuxt/3.nuxt.bundle.0e6859040801587d6cec.js
+dist/_nuxt/4.nuxt.bundle.12774e43bf3d7b5325a8.js
+dist/_nuxt/5.nuxt.bundle.e52e4c7db1d1a07d9d3a.js
+dist/_nuxt/img/benefits.5e833b9.jpg
+dist/_nuxt/img/bio.184cf4e.png
+dist/_nuxt/img/class.0826cfc.jpg
+dist/_nuxt/img/flow_one.a96d90d.jpg
+dist/_nuxt/img/flow_two.6762a3c.jpg
+dist/_nuxt/img/lotus.333fecd.svg
+dist/_nuxt/index.html
+dist/_nuxt/manifest.3b40cb706ca39d9c406e.js
+dist/_nuxt/nuxt.bundle.72e86ededa331fe5b90d.js
+dist/_nuxt/server-bundle.json
+dist/_nuxt/vendor.bundle.3b40cb706ca39d9c406e.js
+dist/.nojekyll
+dist/about/index.html
+dist/benefits/index.html
+dist/classes/index.html
+dist/index.html
