--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "dev": "nuxt",
     "build": "nuxt build",
-    "start": "nuxt start"
+    "start": "nuxt start",
+		"generate": "nuxt generate"
   },
   "keywords": [
     "nuxt",
@@ -15,6 +16,7 @@
   ],
   "dependencies": {
     "axios": "^0.16.1",
+    "node-mailer": "^0.1.1",
     "nuxt": "^0.10.5",
     "vue-in-viewport-directive": "^1.1.4",
     "vue-parallax-js": "0.0.4",
