--- a/.gitignore
+++ b/.gitignore
@@ -86,3 +86,32 @@ dist/about/index.html
 dist/benefits/index.html
 dist/classes/index.html
 dist/index.html
+dist/_nuxt/0.nuxt.bundle.3de9e03352e072bb09ea.js
+dist/_nuxt/0.nuxt.bundle.f64309662a6dda1aa7a2.js
+dist/_nuxt/1.nuxt.bundle.2da46acf697a2ca584f3.js
+dist/_nuxt/1.nuxt.bundle.45a593fe1469872d4861.js
+dist/_nuxt/2.nuxt.bundle.2806e861635035e7a473.js
+dist/_nuxt/2.nuxt.bundle.cefb8b00c153677c2aad.js
+dist/_nuxt/3.nuxt.bundle.5d25428706e2e1f03a2d.js
+dist/_nuxt/img/folder_icon.3ae07e6.jpg
+dist/_nuxt/index.html
+dist/_nuxt/manifest.2ec50911aa89dcb1953b.js
+dist/_nuxt/manifest.3768a32b8465f3935a04.js
+dist/_nuxt/nuxt.bundle.8c11fe23b88f22a8df19.js
+dist/_nuxt/nuxt.bundle.53f0046f671ab6279680.js
+dist/_nuxt/server-bundle.json
+dist/_nuxt/vendor.bundle.2ec50911aa89dcb1953b.js
+dist/_nuxt/vendor.bundle.3768a32b8465f3935a04.js
+dist/index.html
+dist/info/index.html
+dist/work/asdasdasdasdasdasdasdasd/index.html
+dist/work/mateo-marquez/index.html
+dist/work/mmm-test/index.html
+dist/work/test-entry-1/index.html
+dist/work/test-entry-2/index.html
+dist/work/test-entry-3/index.html
+dist/work/test-entry-4/index.html
+dist/work/test-entry-5/index.html
+dist/work/test-entry-6/index.html
+dist/work/test-tes/index.html
+dist/work/wwefwefwefwfwerf/index.html
